<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cat.smap.backend</groupId>
    <artifactId>smap-backend-hexagonal</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>smap-backend-hexagonal</name>
    <description>Aplicació de backend modular i amb patró d'arquitectura hexagonal (ports i adapters)</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- Spring Boot Starters -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>3.4.5</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-security</artifactId>
                <version>3.4.5</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-validation</artifactId>
                <version>3.4.5</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
                <version>3.4.5</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>3.4.5</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>3.4.5</version>
            </dependency>
            <!-- / Spring Boot Starters -->

            <!-- Documentació API (Swagger / Springdoc) -->
<!--            <dependency>-->
<!--                <groupId>org.springdoc</groupId>-->
<!--                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
<!--                <version>2.5.0</version>-->
<!--            </dependency>-->
            <!-- / Documentació API (Swagger / Springdoc) -->

            <!-- MapStruct requerit per desenvolupar els Mappers -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>1.5.5.Final</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>1.5.5.Final</version>
            </dependency>
            <!-- / MapStruct requerit per desenvolupar els Mappers -->

            <!-- YAML Parser (per configurar via yml) -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>2.2</version>
            </dependency>
            <!-- / YAML Parser (per configurar via yml) -->


            <!-- @todo: Dependencies per activar segons avanci el desenvolupament del projecte -->

            <!-- Validacions Hibernate -->
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>8.0.2.Final</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>3.0.2</version>
            </dependency>
            <!-- / Validacions Hibernate -->

            <!-- JWT (per a autenticació via tokens) -->
<!--            <dependency>-->
<!--                <groupId>io.jsonwebtoken</groupId>-->
<!--                <artifactId>jjwt-api</artifactId>-->
<!--                <version>0.11.5</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>io.jsonwebtoken</groupId>-->
<!--                <artifactId>jjwt-impl</artifactId>-->
<!--                <version>0.11.5</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>io.jsonwebtoken</groupId>-->
<!--                <artifactId>jjwt-jackson</artifactId>-->
<!--                <version>0.11.5</version>-->
<!--            </dependency>-->
            <!-- / JWT (per a autenticació via tokens) -->

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- PostgreSQL -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>app</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
<!--                <configuration>-->
<!--                    <includes>-->
<!--                        <include>**/*Test.java</include>-->
<!--                        <include>**/*IT.java</include>-->
<!--                    </includes>-->
<!--                </configuration>-->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.5.5.Final</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.15.0</version>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>backend-utils</module>
        <module>backend-application</module>
        <module>backend-domain</module>
        <module>backend-infrastructure</module>
        <module>backend-web</module>
    </modules>

</project>
